--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My JavaScript App</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <style>
+  footer{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  }
+  </style>
+  <title>MicroPosts</title>
 </head>
-<body>
-  <h1>My JavaScript App</h1>
-  <p>This app was compiled using the Babel Webpack Starter Pack which can compile ES2015, ES2016 and ES2017 code including Async/Await</p>
+<body class="bg-secondary">
+ 
+  <nav class="navbar navbar-dark bg-primary mb-3 ">
+    <div class="container">
+      <a href="#" class="navbar-brand ">MicroPosts</a>
+    </div>
+  </nav>
+
+  <div class="container postsContainer text-center ">
+    <div class="card card-body card-form bg-info">
+      <h1>Say Something</h1>
+      <p class="lead">What's on your mind?</p>
+      <div class="form-group">
+        <input type="text" id="title" class="form-control" placeholder="Post Title">
+      </div>
+      <div class="form-group">
+        <textarea id="body" class="form-control" placeholder="Post body"></textarea>
+      </div>
+      <input type="hidden" id="id" value="">
+      <button class="post-submit btn btn-primary btn-block border-dark">Post It</button>
+      <span class="form-end"></span>
+    </div>
+    <br>
+    <div id="posts"></div>
+  </div>
+  <footer class="mt-5 p-3 text-center bg-light ">
+    MicroPosts &copy;
+  </footer>
   
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="build/app.bundle.js"></script>
 </body>
 </html>
