--- a/index.html
+++ b/index.html
@@ -6,22 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <style>
-  footer{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: auto;
-  }
-  </style>
+  
   <title>MicroPosts</title>
 </head>
 <body class="bg-secondary">
  
   <nav class="navbar navbar-dark bg-primary mb-3 ">
     <div class="container">
-      <a href="#" class="navbar-brand ">MicroPosts</a>
+      <a href="#" class="navbar-brand mx-auto">MicroPosts</a>
     </div>
   </nav>
 
@@ -42,7 +34,8 @@
     <br>
     <div id="posts"></div>
   </div>
-  <footer class="mt-5 p-3 text-center bg-light ">
+  
+  <footer class="mt-5 p-3 text-center bg-light fixed-bottom">
     MicroPosts &copy;
   </footer>
   
